--- a/package.json
+++ b/package.json
@@ -9,13 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
+    "assemblyai": "^4.9.0",
+    "axios": "^1.8.4",
+    "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.46",
+    "expo-av": "~15.0.2",
+    "expo-file-system": "~18.0.12",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
+    "lodash": "^4.17.21",
+    "lucide-react-native": "^0.501.0",
+    "pocketbase": "^0.26.0",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-paper": "^5.13.3",
+    "react-native-paper-dates": "^0.22.40",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-splash-screen": "~0.29.24"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
