--- a/package.json
+++ b/package.json
@@ -3,37 +3,43 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "assemblyai": "^4.9.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
+    "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.501.0",
     "pocketbase": "^0.26.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-calendars": "^1.1312.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.3",
     "react-native-paper-dates": "^0.22.40",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
